# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md
0_Getting_Started/: CMakeLists.txt
0_Getting_Started/01_Window/: CMakeLists.txt
0_Getting_Started/02_Triangle/: CMakeLists.txt  Triangle.cpp
0_Getting_Started/03_Shaders/: CMakeLists.txt
0_Getting_Started/04_Textures/: CMakeLists.txt  TextureUnits.cpp  Textures.cpp
0_Getting_Started/04_Textures/resources/shaders/TextureUnits/: shader.frag  shader.vert
0_Getting_Started/04_Textures/resources/shaders/Textures/: shader.frag  shader.vert
0_Getting_Started/05_Transformations/: CMakeLists.txt  Projection.cpp  Transformations.cpp
0_Getting_Started/05_Transformations/resources/: ProjectionShader.frag  ProjectionShader.vert  TransformationsShader.vert
Exercises/: Beyond.cpp  CMakeLists.txt  Corruption.cpp  Filtering.cpp  GeometricPulse.cpp  GuiPlayground.cpp  Oscilation.cpp  PhysicalCanvas.cpp  Polygon.cpp  ReversedFace.cpp  ReversedTriangle.cpp  SameValues.cpp  Scroll.cpp  Shapes.cpp  Triangles3.cpp
Exercises/resources/shaders/: BeyondShader.frag  FilteringShader.frag  FilteringShader.vert  ReversedFaceShader.frag  ScrollShader.frag  ScrollShader.vert  canvas.frag  corruption.frag  corruption.vert  oscilation.frag  pulse.frag  pulse.vert  vShader1.vert  vShader2.vert  vShader3.vert
include/: EBO.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp  WindowManager.hpp
include/glad/: glad.h
lib/windows/: Makefile  cmake_install.cmake  glfw3.lib
src/: 2_usrInput.cpp  3_rendering.cpp  EBO.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  WindowManager.cpp  glad.c  stb_image.cpp  traingle.cpp
src/0_Getting_Started/: CMakeLists.txt  WindowManager.cpp
src/0_Getting_Started/01_Window/: CMakeLists.txt  Window.cpp  main.cpp
src/0_Getting_Started/02_Triangle/: CMakeLists.txt  EBO.cpp  Triangle.cpp  Window.cpp  main.cpp
src/0_Getting_Started/03_Shaders/: CMakeLists.txt  Shaders.cpp
src/0_Getting_Started/Exercises/: CMakeLists.txt  Triangles.cpp  Triangles2.cpp  Triangles3.cpp
src/1_GettingStarted/1.1_HelloWindow/: 1.1_HelloWindow.cpp
src/1_GettingStarted/1.1_HelloWindow/1.1.1_Input/: 1.1.1_Input.cpp
src/1_GettingStarted/1.1_HelloWindow/1.1.2_Rendering/: 1.1.2_Rendering.cpp
src/1_GettingStarted/1.1_HelloWindow/1.1.2_rendering/: 1.1.2_rendering.cpp
src/1_GettingStarted/1.1_ventana/: 1_ventana.cpp
src/1_GettingStarted/1.1_window/: 1_window.cpp
src/1_GettingStarted/1.2_HelloTriangle/: 4.2_buffers.cpp  4.3_shaders.cpp  4.6_EBO_cuadrado.cpp
src/1_GettingStarted/1.2_Hello_Triangle/: 1.2.1_Hello_Triangle.cpp  1.2.2_EBOs.cpp  1.2_Hello_Triangle.cpp
src/1_GettingStarted/1.2_Hello_Triangle/Exercises/: exercise1.cpp  exercise2.cpp  exercise3.cpp
src/1_GettingStarted/1.3_Shaders/: 5.1_shaderEjemplo.vs  5.6_MasAtributos.cpp
src/1_GettingStarted/1.3_Shaders/1.3.1_GLSL/: 1.3.1_glsl.cpp
src/1_GettingStarted/1.3_Shaders/1.3.2_Uniforms/: 1.3.2_Unforms.cpp
src/1_GettingStarted/1.3_Shaders/1.3.3_MoreAttributes/: 1.3.3_MoreAttributes.cpp
src/1_GettingStarted/1.4_dibujandoUnTriangulo/: 4.4_enlazandoAtributosDeVertice.cpp  4.6_EBO_cuadrado.cpp  4_cuadrado.cpp  4_traingulo.cpp
src/1_GettingStarted/1.5_Shaders/: 5.2_atributosDeVertex.cpp  5.3_Tipos.vs  5.4_InOut.cpp  5.5_Uniforms.cpp
src/1_GettingStarted/1.6_Textures/: 6.2_dibujandoUnContenedor.cpp
src/4_dibujandoUnTriangulo/: 4.1_vertices.cpp  4.2_buffers.cpp  4.3_shaders.cpp  4.4_enlazandoAtributosDeVertice.cpp  4.5_VAO.cpp  4.6_EBO_cuadrado.cpp  4_cuadrado.cpp  4_traingulo.cpp
src/Exercises/: CMakeLists.txt  Offset.cpp  Polygon.cpp  Template.cpp  Triangles3.cpp
src/Exercises/resources/shaders/: fShader1.frag
src/exercises/: dibujandoUnPoligono.cpp  diferentesColores.cpp  dosTriangulosSinEBOs.cpp  optimizandoCuadrado.cpp
src/exercises/HelloTriangle/: 1_ex.cpp  2_ex.cpp  3_ex.cpp  5_ex.cpp
src/exercises/Personal/: dibujandoUnPoligono.cpp  optimizandoCuadrado.cpp  usandoShaderClass.cpp
src/shaders/shadersContenedor/: vshader.vs
src/shaders/usandoShaderClass/: vshader.vs
